--- a/style.scss
+++ b/style.scss
@@ -16,6 +16,8 @@ $sixth_object: #00b398;
 * {
 	padding:0;
 	margin:0;
+	-ms-touch-action: none;
+	-ms-content-zooming: none;
 }
 body {
 	font-family:"Brown", sans-serif;
@@ -585,8 +587,8 @@ img {
 			color:$sand;
 			position: relative;
 			h2 {
-				font-size: 1em;
-				height: 16px;
+				font-size: .80em;
+				height: 13px;
 				margin: auto;
 				top: 0;
 				bottom: 0;
@@ -1067,9 +1069,6 @@ img {
 		right: 0;
 		bottom: 0;
 		left: 0;
-	}
-	img {
-		border:15px solid #fff;
 	}
 	p {
 		padding: 0 15px 18px;
