--- a/css/style.css
+++ b/css/style.css
@@ -521,6 +521,27 @@ img {
     top: 48px;
     right: 0;
     display: none; }
+    .content_section .expanded .triangle {
+      width: 0;
+      height: 0;
+      border-top: 17px solid transparent;
+      border-bottom: 17px solid transparent;
+      margin-top: -15.5px;
+      position: absolute;
+      left: 25%;
+      margin-left: -17px;
+      z-index: 100;
+      top: 175.5px;
+      display: none; }
+      .content_section .expanded .triangle .inner {
+        width: 0;
+        height: 0;
+        border-top: 14px solid transparent;
+        border-bottom: 14px solid transparent;
+        border-right: 14px solid #e2dbcf;
+        margin-top: -14px;
+        position: absolute;
+        right: -18px; }
     .content_section .expanded:nth-of-type(2) {
       display: block; }
       .content_section .expanded:nth-of-type(2) .single_content {
@@ -537,7 +558,7 @@ img {
       border-color: #842b38; }
     .content_section .expanded:nth-of-type(3) .locator .connector {
       background-color: #842b38; }
-    .content_section .expanded:nth-of-type(3) .locator .triangle {
+    .content_section .expanded:nth-of-type(3) .triangle {
       border-right: 17px solid #842b38; }
     .content_section .expanded:nth-of-type(4) a {
       color: #356e5d; }
@@ -549,7 +570,7 @@ img {
       border-color: #356e5d; }
     .content_section .expanded:nth-of-type(4) .locator .connector {
       background-color: #356e5d; }
-    .content_section .expanded:nth-of-type(4) .locator .triangle {
+    .content_section .expanded:nth-of-type(4) .triangle {
       border-right: 17px solid #356e5d; }
     .content_section .expanded:nth-of-type(5) a {
       color: #44356e; }
@@ -561,7 +582,7 @@ img {
       border-color: #44356e; }
     .content_section .expanded:nth-of-type(5) .locator .connector {
       background-color: #44356e; }
-    .content_section .expanded:nth-of-type(5) .locator .triangle {
+    .content_section .expanded:nth-of-type(5) .triangle {
       border-right: 17px solid #44356e; }
     .content_section .expanded:nth-of-type(6) a {
       color: #3d6689; }
@@ -573,7 +594,7 @@ img {
       border-color: #3d6689; }
     .content_section .expanded:nth-of-type(6) .locator .connector {
       background-color: #3d6689; }
-    .content_section .expanded:nth-of-type(6) .locator .triangle {
+    .content_section .expanded:nth-of-type(6) .triangle {
       border-right: 17px solid #3d6689; }
     .content_section .expanded:nth-of-type(7) a {
       color: #df661d; }
@@ -585,7 +606,7 @@ img {
       border-color: #df661d; }
     .content_section .expanded:nth-of-type(7) .locator .connector {
       background-color: #df661d; }
-    .content_section .expanded:nth-of-type(7) .locator .triangle {
+    .content_section .expanded:nth-of-type(7) .triangle {
       border-right: 17px solid #df661d; }
     .content_section .expanded:nth-of-type(8) a {
       color: #00b398; }
@@ -597,14 +618,14 @@ img {
       border-color: #00b398; }
     .content_section .expanded:nth-of-type(8) .locator .connector {
       background-color: #00b398; }
-    .content_section .expanded:nth-of-type(8) .locator .triangle {
+    .content_section .expanded:nth-of-type(8) .triangle {
       border-right: 17px solid #00b398; }
     .content_section .expanded .single_content {
       position: absolute;
       right: 6.25%;
       height: 100%;
       background-color: #e2dbcf;
-      z-index: 10; }
+      z-index: 20; }
       .content_section .expanded .single_content.context_content {
         width: 31.25%; }
       .content_section .expanded .single_content.object_content {
@@ -618,7 +639,7 @@ img {
             padding-top: 30px;
             margin-left: 15px;
             margin-right: 15px;
-            max-width: 397px;
+            max-width: 398px;
             height: auto; }
           .content_section .expanded .single_content.object_content .images .image_caption {
             font-size: 0.73333333333333em;
@@ -806,23 +827,6 @@ img {
         height: 3px;
         top: 176px;
         right: 0; }
-        .content_section .expanded .locator .connector .triangle {
-          width: 0;
-          height: 0;
-          border-top: 17px solid transparent;
-          border-bottom: 17px solid transparent;
-          margin-top: -15.5px;
-          position: absolute;
-          right: 0; }
-          .content_section .expanded .locator .connector .triangle .inner {
-            width: 0;
-            height: 0;
-            border-top: 14px solid transparent;
-            border-bottom: 14px solid transparent;
-            border-right: 14px solid #e2dbcf;
-            margin-top: -14px;
-            position: absolute;
-            right: -18px; }
       .content_section .expanded .locator .map_button {
         position: absolute;
         top: 635px;
