--- a/style.scss
+++ b/style.scss
@@ -629,6 +629,29 @@ img {
 		display: none;
 		&.active {
 		}
+		.triangle {
+		    width: 0;
+		    height: 0;
+		    border-top: 17px solid transparent;
+		    border-bottom: 17px solid transparent;
+		    margin-top: -15.5px;
+		    position: absolute;
+		    left: 25%;
+		    margin-left: -17px;
+		    z-index: 100;
+		    top: 175.5px;
+		    display: none;
+			.inner {
+				width: 0; 
+				height: 0; 
+				border-top: 14px solid transparent;
+				border-bottom: 14px solid transparent; 
+				border-right:14px solid #e2dbcf;
+				margin-top: -14px;
+				position: absolute;
+				right: -18px;
+			}
+		}
 		&:nth-of-type(2) {
 			display: block;
 			.single_content {
@@ -655,9 +678,9 @@ img {
 				.connector {
 					background-color: $first_object;
 				}
-				.triangle {
-					border-right:17px solid $first_object;
-				}
+			}
+			.triangle {
+				border-right:17px solid $first_object;
 			}
 		}
 		&:nth-of-type(4) {
@@ -677,9 +700,9 @@ img {
 				.connector {
 					background-color: $second_object;
 				}
-				.triangle {
-					border-right:17px solid $second_object;
-				}
+			}
+			.triangle {
+				border-right:17px solid $second_object;
 			}
 		}
 		&:nth-of-type(5) {
@@ -699,9 +722,9 @@ img {
 				.connector {
 					background-color: $third_object;
 				}
-				.triangle {
-					border-right:17px solid $third_object;
-				}
+			}
+			.triangle {
+				border-right:17px solid $third_object;
 			}
 		}
 		&:nth-of-type(6) {
@@ -721,9 +744,9 @@ img {
 				.connector {
 					background-color: $fourth_object;
 				}
-				.triangle {
-					border-right:17px solid $fourth_object;
-				}
+			}
+			.triangle {
+				border-right:17px solid $fourth_object;
 			}
 		}
 		&:nth-of-type(7) {
@@ -743,9 +766,9 @@ img {
 				.connector {
 					background-color: $fifth_object;
 				}
-				.triangle {
-					border-right:17px solid $fifth_object;
-				}
+			}
+			.triangle {
+				border-right:17px solid $fifth_object;
 			}
 		}
 		&:nth-of-type(8) {
@@ -765,9 +788,9 @@ img {
 				.connector {
 					background-color: $sixth_object;
 				}
-				.triangle {
-					border-right:17px solid $sixth_object;
-				}
+			}
+			.triangle {
+				border-right:17px solid $sixth_object;
 			}
 		}
 		.single_content {
@@ -775,7 +798,7 @@ img {
 			right: 6.25%;
 			height: 100%;
 			background-color:$sand;
-			z-index: 10;
+			z-index: 20;
 			&.context_content {
 				width:31.25%;
 			}
@@ -790,7 +813,7 @@ img {
 						padding-top: 30px;
 						margin-left:15px;
 						margin-right: 15px;
-						max-width: 397px;
+						max-width: 398px;
 						height: auto;
 					}
 					.image_caption {
@@ -1022,25 +1045,7 @@ img {
 				height: 3px;
 				top: 176px;
 				right: 0;
-				.triangle {
-					width: 0; 
-					height: 0; 
-					border-top: 17px solid transparent;
-					border-bottom: 17px solid transparent; 
-					margin-top: -15.5px;
-					position: absolute;
-					right: 0;
-					.inner {
-						width: 0; 
-						height: 0; 
-						border-top: 14px solid transparent;
-						border-bottom: 14px solid transparent; 
-						border-right:14px solid #e2dbcf;
-						margin-top: -14px;
-						position: absolute;
-						right: -18px;
-					}
-				}
+				
 			}
 			.map_button{
 				position: absolute;
