--- a/style.scss
+++ b/style.scss
@@ -115,10 +115,10 @@ img {
 		}
 	}
 	.attract_image {
-		width: 511px;
-		height: 511px;
+		width: 600px;
+		height: 600px;
 		border:3px solid;
-		border-radius:258.5px;
+		border-radius:303px;
 		margin: auto;
 		position: absolute;
 		top: 0;
@@ -159,10 +159,10 @@ img {
 		    margin: auto;
 		}
 		.circle {
-			width: 84px;
-			height: 84px;
+			width: 100px;
+			height: 100px;
 			border: 3px solid $red;
-			border-radius:45px;
+			border-radius:53px;
 			position: absolute;
 		    top: 0px;
 		    right: 0;
@@ -172,13 +172,13 @@ img {
 		}
 		.connector {
 			position: absolute;
-		    width: 210px;
+		    width: 250px;
 		    height: 3px;
 		    top: -1px;
 		    right: 0;
 		    background-color: $red;
 		    bottom: 0;
-		    left: 216px;
+		    left: 250px;
 		    margin: auto 0;
 		}
 	}
@@ -210,7 +210,7 @@ img {
     	right: 0;
     	top:48px;
     	background-color: $sand;
-    	height: 720px;
+    	height: 852px;
     	border-left: 3px solid #a09b93;
     	h1 {
 		    font-size: 2.13333333333333em;
@@ -229,16 +229,16 @@ img {
 }
 .container {
 	font-size: 0.9375em; /* 15 / 16 */
-	width: 1366px;
-	height: 768px;
+	width: 1600px;
+	height: 900px;
 	margin: auto;
 	position: relative;
 	background-color: #b6afa5;
 	overflow: hidden;
 }
 #mapContainer {
-    height: 768px;
-    width: 1366px;
+    height: 900px;
+    width: 1600px;
     overflow: hidden;
     margin: auto;
     position: absolute;
@@ -248,8 +248,8 @@ img {
     right: 0;
 }
 .context_map {
-	width: 1366px;
-	height: 768px;
+	width: 1600px;
+	height: 900px;
 	background: url('../images/detailed_oceanic_map_50-01.jpg') top left no-repeat;
 	-webkit-background-size: cover;
   	-moz-background-size: cover;
@@ -262,13 +262,13 @@ img {
 	bottom:0px;
 	z-index: 1;
 	&.big {
-		background-image: url('../images/detailed_oceanic_map_low-01.jpg');
+		background-image: url('../images/detailed_oceanic_map_low-01_new.jpg');
 	}
 }
 .attract_loop_map {
-	background-image: url('../images/detailed_oceanic_map_low-01.jpg');
-	width: 10928px; 
-	height: 6144px;
+	background-image: url('../images/detailed_oceanic_map_low-01_new.jpg');
+	width: 12800px; 
+	height: 7196px;
 	-webkit-background-size: cover;
   	-moz-background-size: cover;
   	-o-background-size: cover;
@@ -281,8 +281,8 @@ img {
 	z-index: 3;
 }
 .intro_map {
-	width: 939.125px;
-	height: 720px;
+	width: 1100px;
+	height: 852px;
 	overflow: hidden;
 	position: absolute;
 	top: 48px;
@@ -332,13 +332,13 @@ img {
 	width: 12.5%;
 	border: 1px solid #e1dbce;
 	background-color: #928c85;
-	z-index:30;
+	z-index:110;
 	.expand_map {
 		padding: 15px;
 		color:#fff8ea;
 		text-transform: uppercase;
 		position: relative;
-    	margin-bottom: 97px;
+    	margin-bottom: 113px;
 	}
 	.full_map {
 		border-top: 1px solid #e1dbce;
@@ -377,7 +377,7 @@ img {
 			display: none;
 			top: 0;
 			width: 100%;
-			height:720px;
+			height:852px;
 		}
 }
 .label_bar {
@@ -439,8 +439,8 @@ img {
 	}
 }
 .labels {
-	width: 1366px;
-	height: 768px;
+	width: 1600px;
+	height: 900px;
 	position: absolute;
 	top: -48px;
 	display: none;
@@ -623,7 +623,7 @@ img {
 		position: absolute;
 		z-index: 10;
 		width:100%;
-		height: 720px;
+		height: 852px;
 		top: 48px;
 		right: 0;
 		display: none;
@@ -639,7 +639,7 @@ img {
 		    left: 25%;
 		    margin-left: -17px;
 		    z-index: 100;
-		    top: 175.5px;
+		    top: 216.5px;
 		    display: none;
 			.inner {
 				width: 0; 
@@ -848,7 +848,8 @@ img {
 				display: none;
 			}
 			h2.lightbox_trigger {
-				padding: 30px 15px 0; 
+				padding: 30px 15px 0;
+				display: block;
 			}
 			p {
 				padding: 0 15px 18px;
@@ -1024,16 +1025,16 @@ img {
 				position:absolute;
 				width: 100%;
 				text-align: center;
-				bottom: -127px;
+				bottom: -156px;
 				font-family: "Brown", sans-serif;
 				font-weight: bold;
 			}
 			.circle {
-				width: 84px;
-				height: 84px;
+				width: 100px;
+				height: 100px;
 				border: 3px solid;
-				border-radius:45px;
-			    top: 132px;
+				border-radius:53px;
+			    top: 164px;
 			    position: absolute;
 			    right: 0;
 			    left: 0;
@@ -1041,9 +1042,9 @@ img {
 			}
 			.connector {
 				position: absolute;
-				width: 127px;
+				width: 150px;
 				height: 3px;
-				top: 176px;
+				top: 216px;
 				right: 0;
 				
 			}
@@ -1094,7 +1095,7 @@ img {
 		font-family: 'GrouchITCbyBT-Regular', serif;
 		padding: 30px 15px 30px;
 		line-height: 1.0625em;
-		display:none;
+		display:block;
 	}
 	h2 {
 		font-size: 1em;
