--- a/css/style.css
+++ b/css/style.css
@@ -379,8 +379,8 @@ img {
   position: absolute;
   top: -51px;
   left: 0px;
-  width: 1450px;
-  height: 787px;
+  width: 1698px;
+  height: 922px;
   background: url("../images/german_map.png") top left no-repeat;
   -webkit-background-size: 100%;
   -moz-background-size: 100%;
@@ -869,7 +869,8 @@ img {
     font-family: 'GrouchITCbyBT-Regular', serif;
     padding: 30px 15px 30px;
     line-height: 1.0625em;
-    display: block; }
+    display: block;
+    color: #842b38; }
   .the_lightbox h2 {
     font-size: 1em;
     text-transform: uppercase;
@@ -884,7 +885,8 @@ img {
     font-size: 0.73333333333333em;
     padding: 10px 15px 0; }
   .the_lightbox .close {
-    border: 1px solid #b6afa6;
+    border: 1px solid #842b38;
+    color: #842b38;
     padding: 15px;
     position: absolute;
     text-transform: uppercase;
