--- a/style.scss
+++ b/style.scss
@@ -682,6 +682,9 @@ img {
 			.triangle {
 				border-right:17px solid $first_object;
 			}
+			.gallery_thumb.active {
+				border-color: $first_object !important;
+			}
 		}
 		&:nth-of-type(4) {
 			a {
@@ -703,6 +706,9 @@ img {
 			}
 			.triangle {
 				border-right:17px solid $second_object;
+			}
+			.gallery_thumb.active {
+				border-color: $second_object !important;
 			}
 		}
 		&:nth-of-type(5) {
@@ -726,6 +732,9 @@ img {
 			.triangle {
 				border-right:17px solid $third_object;
 			}
+			.gallery_thumb.active {
+				border-color: $third_object !important;
+			}
 		}
 		&:nth-of-type(6) {
 			a {
@@ -747,6 +756,9 @@ img {
 			}
 			.triangle {
 				border-right:17px solid $fourth_object;
+			}
+			.gallery_thumb.active {
+				border-color: $fourth_object !important;
 			}
 		}
 		&:nth-of-type(7) {
@@ -770,6 +782,9 @@ img {
 			.triangle {
 				border-right:17px solid $fifth_object;
 			}
+			.gallery_thumb.active {
+				border-color: $fifth_object !important;
+			}
 		}
 		&:nth-of-type(8) {
 			a {
@@ -791,6 +806,9 @@ img {
 			}
 			.triangle {
 				border-right:17px solid $sixth_object;
+			}
+			.gallery_thumb.active {
+				border-color: $sixth_object !important;
 			}
 		}
 		.single_content {
@@ -815,6 +833,12 @@ img {
 						margin-right: 15px;
 						max-width: 470px;
 						height: auto;
+					}
+					.gallery_thumb {
+						padding:15px;
+						margin: 15px 0px 15px 15px;
+						border:1px solid #a09b93;
+						display: inline-block;
 					}
 					.image_caption {
 						font-size: 0.73333333333333em;
