--- a/style.scss
+++ b/style.scss
@@ -222,6 +222,22 @@ img {
 		    color:#7e7b74;
 		    border-bottom: 1px solid #7e7b74;
     	}
+    	h2 {
+			font-size: 1em;
+			text-transform: uppercase;
+			text-align: center;
+			margin-top: -20px;
+			padding: 0 15px 30px;
+			line-height: 1.0625em;
+			font-family: "Brown", sans-serif;
+			font-weight: bold;
+			display: none;
+			color:$red;
+		}
+		h2.lightbox_trigger {
+			padding: 30px 15px 0;
+			display: block;
+		}
     	p {
     		padding: 0 15px 18px;
     	}
@@ -1168,5 +1184,14 @@ img {
 		right: -1px;
 		top:-1px;
 		z-index: 30;
+	}
+	.credits {
+		.column {
+			width: 50%;
+			float: left;
+		}
+		p {
+			padding:0 50px 18px;
+		}
 	}
 }
