--- a/css/style.css
+++ b/css/style.css
@@ -667,6 +667,19 @@ img {
             margin-right: 15px;
             max-width: 470px;
             height: auto; }
+          .content_section .expanded .single_content.object_content .images .image_gallery {
+            position: relative;
+            height: 726px; }
+            .content_section .expanded .single_content.object_content .images .image_gallery img {
+              position: absolute;
+              top: 0;
+              right: 0;
+              bottom: 0;
+              left: 0;
+              margin: auto 15px;
+              padding-top: 0; }
+            .content_section .expanded .single_content.object_content .images .image_gallery .image_caption {
+              position: absolute; }
           .content_section .expanded .single_content.object_content .images .gallery_thumb {
             padding: 15px;
             margin: 15px 0px 15px 15px;
@@ -675,7 +688,8 @@ img {
           .content_section .expanded .single_content.object_content .images .image_caption {
             font-size: 0.73333333333333em;
             line-height: 1.5em;
-            padding: 10px 15px 0; }
+            padding: 10px 15px 0;
+            bottom: 0; }
             .content_section .expanded .single_content.object_content .images .image_caption .caption {
               margin-right: 7px;
               display: inline; }
@@ -690,7 +704,8 @@ img {
                 padding: 0;
                 margin: 0;
                 width: 8px;
-                height: 8px; }
+                height: 8px;
+                position: static; }
         .content_section .expanded .single_content.object_content .content {
           width: 54.54545454545455%;
           position: absolute;
