--- a/style.scss
+++ b/style.scss
@@ -850,6 +850,22 @@ img {
 						max-width: 470px;
 						height: auto;
 					}
+					.image_gallery {
+						position: relative;
+						height: 726px;
+						img {
+							position: absolute;
+							top: 0;
+							right:0;
+							bottom: 0;
+							left: 0;
+							margin: auto 15px;
+							padding-top: 0;
+						}
+						.image_caption {
+							position: absolute;
+						}
+					}
 					.gallery_thumb {
 						padding:15px;
 						margin: 15px 0px 15px 15px;
@@ -860,6 +876,7 @@ img {
 						font-size: 0.73333333333333em;
 						line-height: 1.5em;
 						padding: 10px 15px 0;
+						bottom: 0;
 						.caption {
 							margin-right: 7px;
 							display: inline;
@@ -876,6 +893,7 @@ img {
 						    	margin: 0;
 						    	width: 8px;
 						    	height:8px;
+						    	position: static;
 						    }
 						}
 					}
