--- a/style.scss
+++ b/style.scss
@@ -241,6 +241,10 @@ img {
     	p {
     		padding: 0 15px 18px;
     	}
+    	.instructions {
+    		border-top: 1px solid #a09b93;
+    		padding-top: 18px;
+    	}
     }
 }
 .container {
@@ -350,7 +354,7 @@ img {
 	background-color: #928c85;
 	z-index:110;
 	.expand_map {
-		padding: 15px;
+		padding: 15px 15px 15px 25px;
 		color:#fff8ea;
 		text-transform: uppercase;
 		position: relative;
@@ -435,7 +439,7 @@ img {
 	    border: 1px solid #e1dbce;
 	    width: 15px;
 	    height: 15px;
-	    margin-left: 15px;
+	    margin-left: 25px;
 	    margin-right: 10px;
 	    cursor: pointer;
 	    float: left;
@@ -1196,7 +1200,7 @@ img {
 	.close {
 		border:1px solid $first_object;
 		color:$first_object;
-		padding: 15px;
+		padding: 25px;
 		position: absolute;
 		text-transform: uppercase;
 		right: -1px;
